# cmake_minimal

./: 1Cmake.sh  2runExe.sh  3cleanTarget.sh  4runTest.sh  7VersionOfCurrentTools.sh  CMakeDefaults.txt  CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp
src/.cache/clangd/index/: main.cpp.F06389804FE35CD5.idx
src/addition/: addition.cpp
tests/test01_proofOfWork/: CMakeLists.txt  stackoverflow.txt  tests.cpp  whattotest.cpp
